--- a/src/components/desserts.scss
+++ b/src/components/desserts.scss
@@ -28,6 +28,10 @@
         left: 72px;
         background-color: $rose50;
         cursor: pointer;
+
+        img {
+          margin-right: 5px;
+        }
       }
       .product-details {
         padding: 15px 0;
@@ -39,10 +43,11 @@
           font-size: 16px;
           font-weight: 600;
           color: $rose900;
+          margin: 3px 0;
         }
         .product-price {
           color: $red;
-          font-weight: 400;
+          font-weight: 500;
         }
       }
     }
