--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,7 @@ body {
 #main {
   .row {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 1.5fr;
+    gap: 2rem;
   }
 }
